naming: runs instead of epochs with multi-armed bandits

--- a/01_multi-armed_bandits.ipynb
+++ b/01_multi-armed_bandits.ipynb
@@ -33,13 +33,13 @@
    "outputs": [],
    "source": [
     "# function for bandit simulations\n",
-    "def simulate_bandits(bandits, epochs, episodes):\n",
+    "def simulate_bandits(bandits, runs, episodes):\n",
     "    # dictionary for rewards and best actions\n",
     "    history = {}\n",
     "\n",
     "    # evaluate bandits\n",
     "    for policy, bandit in bandits.items():\n",
-    "        rewards, best_actions = bandit.evaluate(epochs = epochs, episodes = episodes)\n",
+    "        rewards, best_actions = bandit.evaluate(runs = runs, episodes = episodes)\n",
     "        history.update({\n",
     "            policy : {\n",
     "                'rewards' : rewards,\n",
@@ -115,7 +115,7 @@
     "}\n",
     "\n",
     "# run simulation\n",
-    "history = simulate_bandits(bandits, epochs = 2000, episodes = 1000)\n",
+    "history = simulate_bandits(bandits, runs = 2000, episodes = 1000)\n",
     "\n",
     "# plot rewards\n",
     "plot_bandits(history)"
@@ -157,7 +157,7 @@
     "}\n",
     "\n",
     "# run simulation\n",
-    "history = simulate_bandits(bandits, epochs = 1000, episodes = 10000)\n",
+    "history = simulate_bandits(bandits, runs = 1000, episodes = 10000)\n",
     "\n",
     "# plot rewards\n",
     "plot_bandits(history)"
@@ -197,7 +197,7 @@
     "}\n",
     "\n",
     "# run simulation\n",
-    "history = simulate_bandits(bandits, epochs = 2000, episodes = 1000)\n",
+    "history = simulate_bandits(bandits, runs = 2000, episodes = 1000)\n",
     "\n",
     "# plot rewards\n",
     "plot_bandits(history)"
@@ -237,7 +237,7 @@
     "}\n",
     "\n",
     "# run simulation\n",
-    "history = simulate_bandits(bandits, epochs = 2000, episodes = 1000)\n",
+    "history = simulate_bandits(bandits, runs = 2000, episodes = 1000)\n",
     "\n",
     "# plot rewards\n",
     "plot_bandits(history)"
@@ -279,7 +279,7 @@
     "}\n",
     "\n",
     "# run simulation\n",
-    "history = simulate_bandits(bandits, epochs = 2000, episodes = 1000)\n",
+    "history = simulate_bandits(bandits, runs = 2000, episodes = 1000)\n",
     "\n",
     "# plot rewards\n",
     "plot_bandits(history)"
