bandits, agents and envs no longer in lib

--- a/02_dynamic_programming.ipynb
+++ b/02_dynamic_programming.ipynb
@@ -11,8 +11,8 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.table import Table\n",
     "\n",
-    "from lib.environments import Gridworld_Lecture, Gridworld_Book\n",
-    "from lib.agents.dynamic_programming import Random_Agent"
+    "from environments import Gridworld_Lecture, Gridworld_Book\n",
+    "from agents.dynamic_programming import Random_Agent"
    ]
   },
   {
