--- a/03a_monte_carlo.ipynb
+++ b/03a_monte_carlo.ipynb
@@ -9,8 +9,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from lib.environments import GridWorldEnv\n",
-    "from lib.agents.monte_carlo import OnPolicy_Agent, OffPolicy_Agent"
+    "from environments import GridWorldEnv\n",
+    "from agents.monte_carlo import OnPolicy_Agent, OffPolicy_Agent"
    ]
   },
   {
