--- a/03b_mc_play.ipynb
+++ b/03b_mc_play.ipynb
@@ -7,12 +7,9 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tqdm.notebook import tqdm\n",
     "\n",
-    "from lib.environments import GridWorldEnv\n",
-    "from lib.agents.monte_carlo import OnPolicy_Agent, OffPolicy_Agent"
+    "from environments import GridWorldEnv\n",
+    "from agents.monte_carlo import OnPolicy_Agent, OffPolicy_Agent"
    ]
   },
   {
