--- a/04a_temporal_difference.ipynb
+++ b/04a_temporal_difference.ipynb
@@ -9,8 +9,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from lib.environments import CliffWalkingEnv\n",
-    "from lib.agents.temporal_difference import Sarsa_Agent, ExpectedSarsa_Agent, QLearning_Agent, DoubleQLearning_Agent"
+    "from environments import CliffWalkingEnv\n",
+    "from agents.temporal_difference import (\n",
+    "    Sarsa_Agent,\n",
+    "    ExpectedSarsa_Agent,\n",
+    "    QLearning_Agent,\n",
+    "    DoubleQLearning_Agent\n",
+    ")"
    ]
   },
   {
