--- a/04b_td_play.ipynb
+++ b/04b_td_play.ipynb
@@ -7,12 +7,19 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tqdm.notebook import tqdm\n",
     "\n",
-    "from lib.environments import WindyGridWorldEnv, KingWindyGridWorldEnv, StochasticWindyGridWorldEnv, CliffWalkingEnv\n",
-    "from lib.agents.temporal_difference import Sarsa_Agent, ExpectedSarsa_Agent, QLearning_Agent, DoubleQLearning_Agent"
+    "from environments import (\n",
+    "    WindyGridWorldEnv,\n",
+    "    KingWindyGridWorldEnv,\n",
+    "    StochasticWindyGridWorldEnv,\n",
+    "    CliffWalkingEnv\n",
+    ")\n",
+    "from agents.temporal_difference import (\n",
+    "    Sarsa_Agent,\n",
+    "    ExpectedSarsa_Agent,\n",
+    "    QLearning_Agent,\n",
+    "    DoubleQLearning_Agent\n",
+    ")"
    ]
   },
   {
