--- a/01_multi-armed_bandits.ipynb
+++ b/01_multi-armed_bandits.ipynb
@@ -6,12 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from lib.bandits import Bandit"
+    "from bandits import Bandit"
    ]
   },
   {
