added monte carlo tree search

--- a/05b_mcts_evaluations.ipynb
+++ b/05b_mcts_evaluations.ipynb
@@ -5,17 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Monte Carlo Tree Search (MCTS)\n",
-    "**Author:** _Fabian Kovac | di221503_  \n",
-    "**Date:** _2022-03-20_"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Introduction\n"
+    "# Monte Carlo Tree Search (MCTS)"
    ]
   },
   {
@@ -28,8 +18,8 @@
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from mcts import MCTS\n",
-    "from tictactoe import TicTacToeEnv\n",
+    "from agents.mcts import MCTS\n",
+    "from environments.tictactoe import TicTacToeEnv\n",
     "\n",
     "from typing import Union"
    ]
